--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	"author": "ArzCorp",
 	"license": "MIT",
 	"dependencies": {
-		"express": "4.18.2"
+		"express": "4.18.2",
+		"mysql2": "^3.0.0-rc.1"
 	}
 }
