--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
 	"type": "module",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "npx nodemon ./src/server.js"
+		"dev": "npx nodemon index.js"
 	},
 	"author": "ArzCorp",
 	"license": "MIT",
 	"dependencies": {
+		"dotenv": "^16.0.3",
 		"express": "4.18.2",
 		"mysql2": "^3.0.0-rc.1"
 	}
